@@ -1,6 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
 *07/06/28:
+   * Strip off additional bits in event state set by Xorg, bug #1736252 (Mark)
+     FbTk/KeyUtil.hh
    * Added some missing Open Office entries and window managers, plus some other
      minor changes in fluxbox-generate_menu
      fluxbox-generate_menu.in
